--- a/Bootstrap/SylviasStyleSheet.css
+++ b/Bootstrap/SylviasStyleSheet.css
@@ -19,26 +19,27 @@ table {
     margin-left: auto;
     margin-right: auto;
     border-collapse: collapse;
-    width: 30%;
-    font-size: 60%;
+    width: 40%;
+    font-size: 70%;
 }
 th {
     font-size: 60%;
     text-align: center;
-    border-bottom: 1px solid black;
+    border-bottom: 2px solid black;
     border-top: 1px solid black;
-    width: 30%;
+    width: 70%;
 }
 td {
-    border-bottom: 1px solid black;
+    border-bottom: 2px solid black;
     text-align: center;
-    width: 30%;
+    width: 40%;
+    font-size:70;
 }
 /*Changing id class background color*/
 tr {
     column-span: 2;
     font-size: 60%;
-    width: 30%;
+    width: 40%;
 }
 #identified {
     font-weight: bold;
