--- a/resumepage.html/stylesheet.css
+++ b/resumepage.html/stylesheet.css
@@ -1,13 +1,20 @@
 /*Stylesheet - CSS*/
 body {
-    #image1{
+    #image1 {
         text-shadow: 200 px 200px;
-        height: 5px;
-        width: 5px;
+        height: 2in;
+        width: 2in;
     }
     #image2 {
         text-shadow: 100px 100px;
-        width: 3px;
-        height: 3px;
+        width: 5%;
+        height: 3%;
+    }
+    #image3 {
+        text-shadow:100px;
+        width: 5%;
+        height: 5%;
+        background-color: solid white;
+        }
     }
 }
