--- a/resumepage.html/stylesheet.css
+++ b/resumepage.html/stylesheet.css
@@ -1,20 +1,22 @@
 /*Stylesheet - CSS*/
 body {
-    #image1 {
+    #html {
         text-shadow: 200 px 200px;
+        background-color: solid white;
         height: 2in;
         width: 2in;
     }
-    #image2 {
+    #css {
         text-shadow: 100px 100px;
+        background-color: solid white;
         width: 5%;
         height: 3%;
     }
-    #image3 {
+    #bootstrap {
         text-shadow:100px;
+        background-color: solid white;
         width: 5%;
         height: 5%;
-        background-color: solid white;
         }
     }
 }
