--- a/Individualproject/stylesheet.css
+++ b/Individualproject/stylesheet.css
@@ -5,6 +5,15 @@ body {
         background-color: solid white;
         height: 2in;
         width: 2in;
+        box-sizing: border-box;
+        position: absolute;
+        width: 600px;
+        height: 600px;
+        left: 239px;
+        top: 654.02px;
+        background: #FFFFFF;
+        box-shadow: 0px 22px 44px rgba(48, 48, 48, 0.25);
+        border-radius: 10px;
     }
     #css {
         text-shadow: 100px 100px;
@@ -18,5 +27,19 @@ body {
         width: 5%;
         height: 5%;
         }
+    }
+    #trademark {
+        position: absolute;
+        width: 302px;
+        height: 19px;
+        left: 713px;
+        top: 2031px;
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 19px;
+        text-align: center;
+        color: #303030;
     }
 }
