--- a/Individualproject/stylesheet.css
+++ b/Individualproject/stylesheet.css
@@ -39,4 +39,14 @@ body {
         text-align: center;
         color: #303030;
     }
+    #selfportrait {
+    position: absolute;
+    width: 600px;
+    height: 609.2px;
+    left: 562px;
+    top: 340px;
+
+background: url(Screenshot_20220414-053048_Discord.jpg);
+
+    }
 }
