--- a/Individualproject/stylesheet.css
+++ b/Individualproject/stylesheet.css
@@ -84,12 +84,12 @@ body {
         text-align: center;
         color: #303030;
     }
-    #htmlpreview {
+    /*Used to center Images*/
+    .center {
         display: block;
         margin-left: auto;
         margin-right: auto;
-        width: auto;
-        text-align: center;
+        width: 75%;
     }
     #context {
         display: block;
