--- a/Individualproject/stylesheet.css
+++ b/Individualproject/stylesheet.css
@@ -8,6 +8,9 @@ body {
         top: 0px;
         background: #FFEFEF;
     }
+    #landinghead {
+        text-align: left;
+    }
     #html {
         text-shadow: 100 px 100px;
         background-color: solid white;
@@ -82,7 +85,8 @@ body {
         display: block;
         margin-left: auto;
         margin-right: auto;
-        width: 75%;
+        width: 60%;
+        text-align: center;
     }
     #context {
         display: block;
@@ -135,8 +139,11 @@ body {
         width: auto;
         text-align: center;
     }
-    h1, h2, h3 {
-        text-align-last: top;
+    #bootstraphead {
         text-align: center;
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 69px;
     }
 }
